# demo

./: Cargo.toml  LICENSE  README.md
.zed/: settings.json
crates/custom_plugin/: Cargo.toml
crates/custom_plugin/.cargo/: config.toml
crates/custom_plugin/src/: lib.rs
crates/demo-cli/: Cargo.toml  build.rs
crates/demo-cli/.cargo/: config.toml
crates/demo-cli/src/: main.rs
crates/http_guest/: Cargo.toml  build.rs
crates/http_guest/src/: lib.rs
crates/http_guest/wit/: deps.toml  world.wit
crates/http_host/: Cargo.toml
crates/http_host/src/: main.rs
crates/plugin_api/: Cargo.toml
crates/plugin_api/src/: lib.rs
crates/plugin_api/wit/: deps.toml  world.wit
crates/plugin_host/: Cargo.toml
crates/plugin_host/src/: main.rs
crates/proc/: Cargo.toml
crates/proc/src/: lib.rs
crates/sql-parser/: Cargo.toml
crates/sql-parser/src/: main.rs
crates/string-concat/: Cargo.toml
crates/string-concat/.cargo/: config.toml
crates/string-concat/src/: main.rs
crates/wasi-demo-app/: Cargo.toml
crates/wasi-demo-app/.cargo/: config.toml
crates/wasi-demo-app/src/: main.rs
