[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "custom_plugin"
version.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "workoss:new-world"

[package.metadata.component.dependencies]

[dependencies]
plugin_api = { path = "../plugin_api" }
ureq = { version = "3.0.0-rc2" }
