[package]
authors.workspace = true
edition = "2021"
license.workspace = true
name = "http_guest"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = {version = "0.34", features = ["realloc", "macros"]}

[build-dependencies]
wit-deps = "0.4"

[package.metadata.component]
target = {path = "wit"}
 