[package]
authors.workspace = true
edition = "2021"
license.workspace = true
name = "plugin_host"
version.workspace = true

[dependencies]
tokio = { version = "1.41", features = ["full"] }
wasmtime = { version = "26", features = [
    "component-model",
    "cranelift",
    "std",
    "runtime",
] }
wasmtime-wasi = "26"
